feat: new lobby system (#46)
Co-authored-by: MCsharerGIT <98043315+MCsharerGIT@users.noreply.github.com>
Co-authored-by: Julian <184911647+6mal7@users.noreply.github.com>